--- a/BrowserCheck.html
+++ b/BrowserCheck.html
@@ -955,6 +955,7 @@
                     <!--1.2 简化安装组件-->
                     <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Office/iSignatureASM.exe" target="_blank">下载电子签章安全软件</a></li>
                     <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Baisc.EXE" target="_blank">下载MIS系统插件</a></li>
+                    <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/flashplayer14_install_win.exe"  target="_blank" title="通过院内网服务器下载安装文件，IE，X86">下载Flash安装包</a></li>
                     <!--5.1.30214.0-->
                     <li class="li_sp_down"><a href="http://mis.msdi.cn/Portal/install/Office/Silverlight5.exe" target="_blank">下载Sliverlight5安装文件</a></li>
                     <li class="li_sp_down"><a href="http://www.microsoft.com/zh-cn/download/details.aspx?id=1639" target="_blank">安装.NET运行框架</a></li>
