Cookies设置后无法在院内首页获取的Bug，需要设置 path: '/'

--- a/BrowserCheck.html
+++ b/BrowserCheck.html
@@ -1162,7 +1162,7 @@
     }
 
     function SetResultCookies(value) {
-        $.cookie("_BCCheck", value, { expires: 32 });
+        $.cookie("_BCCheck", value, { expires: 32 , path: '/'});
     }
 
     $(document).ready(function () {
