恢复检查项

--- a/BrowserCheck.html
+++ b/BrowserCheck.html
@@ -615,7 +615,7 @@
             showIeTool += SliverlightCheck("ie", "9") ? 0 : 1;
 
             //其他业务系统配置要求
-            //OtherSystemCheck("ie", "10");
+            OtherSystemCheck("ie", "10");
             
             if (showIeTool) {
                 $("#ietools").parent().effect('shake', { times: 30 }, 500);
