页面功能注释

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/jquery.min.js?v=1.7.2"></script>
     <script type="text/javascript" src="http://mis.msdi.cn/share/js/jQuery/plugins/jquery.ua.min.js?v=1.2"></script>
 </head>
-<body>
-</body>
+    <body>
+        此页面用于实现将 360浏览器 的内核切换为IE
+    </body>
 </html>
 <script type="text/javascript">
     $(document).ready(function () {
